commit bazel sampel.

--- a/bazel/my-project/lib/BUILD
+++ b/bazel/my-project/lib/BUILD
@@ -2,5 +2,5 @@ cc_library(
     name = "hello-greet",
     srcs = ["hello-greet.cc"],
     hdrs = ["hello-greet.h"],
-    visibility = ["//main:__pkg__"],
+    visibility = ["//main:__pkg__"],	#表示hello-greet对于main/BUILD是可见的
 )
